# Normalized_Spectral_Clustering

./: CMakeLists.txt  README.md  comp.sh  compareWithPilgon.py  fileCompare.py  kmeans.c  leaker  make1000blob.py  matrixOperations.c  matrixOperations.h  my_tester.sh  setup.py  spkmeans.c  spkmeans.h  spkmeans.py  spkmeansmodule.c  tester.sh  vectorOperations.c  vectorOperations.h
testfiles/: jacobi_0.txt  jacobi_1.txt  jacobi_10.txt  jacobi_11.txt  jacobi_12.txt  jacobi_13.txt  jacobi_14.txt  jacobi_15.txt  jacobi_16.txt  jacobi_17.txt  jacobi_18.txt  jacobi_19.txt  jacobi_2.txt  jacobi_21.txt  jacobi_22.txt  jacobi_3.txt  jacobi_4.txt  jacobi_5.txt  jacobi_6.txt  jacobi_7.txt  jacobi_8.txt  jacobi_9.txt  k_array.txt  spk_1.txt  spk_2.txt  spk_3.txt  spk_4.txt  spk_5.txt  spk_6.txt  spk_9.txt  valgrind-python.supp
tests_inputs_outputs/inputs/data_points/: input_0.txt  input_10.txt  input_11.txt  input_12.txt  input_14.txt  input_15.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt  test_inputs.txt
tests_inputs_outputs/inputs/sym_matrix/: sym_matrix_input_12.txt  sym_matrix_input_13.txt  sym_matrix_input_14.txt  sym_matrix_input_15.txt  (+7 more)
tmp/: output.txt
your_outputs/spk/: spk_py_input_0_k_3.txt  spk_py_input_10_k_0.txt  spk_py_input_10_k_25.txt  spk_py_input_12_k_10.txt  spk_py_input_12_k_40.txt  spk_py_input_15_k_5.txt  spk_py_input_1_k_0.txt  spk_py_input_1_k_2.txt  spk_py_input_2_k_0.txt  spk_py_input_3_k_0.txt  spk_py_input_4_k_0.txt  spk_py_input_6_k_20.txt  spk_py_input_7_k_0.txt  spk_py_input_9_k_0.txt
(+147 files in other folders)
